--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "jest": "^29.7.0",
     "lodash": "^4.17.21"
   },
-  "type": "module"
+  "type": "module", 
+  "main": "./nodejs-package/src/index.js"
 }
 
